# local_coin

./: .gitmodules  Cargo.toml  local_coin_config.yaml  package-lock.json  preprocess.py  raw_transactions.csv
eth_opt/src/: opt.sol
eth_opt/test/: Contract.t.sol
local_coin/: Cargo.toml  local_coin_config.yaml  transactions.csv
local_coin/src/: bigquery_transactions.rs  config.rs  errors.rs  lib.rs
local_coin/src/shim/: contract_runner.rs  mod.rs
opt/: Cargo.toml  lib.rs
